# INVINCIBLE-RAID

./: CMakeLists.txt
Huffman_Compressor/: Compressor.cpp  Compressor.h  Huffman_Node.cpp  Huffman_Node.h  Huffman_Tree.h
Main/: main.cpp
RAID/: Disk.cpp  Disk.h  FilePart.cpp  FilePart.h  RAID_Controller.cpp  RAID_Controller.h
Structures/: List.h  Node.h
Trees/: Prueba2_Tree.txt  Prueba3_Tree.txt  Prueba4_Tree.txt  Prueba5_Tree.txt  PruebaSing_Tree.txt  Prueba_Tree.txt
server/: requestHandler.h
